Closed Bug 489224 Opened 16 years ago Closed 16 years ago

Printing doesn't print text field values

Categories

(Core :: Printing: Output, defect, P2)

defect

Tracking

()

VERIFIED FIXED
mozilla1.9.2a1

People

(Reporter: smaug, Assigned: smaug)

References

Details

(Keywords: regression, verified1.9.1, Whiteboard: regression from 425265)

Attachments

(3 files)

<input type="text"> and <textarea> are printed as empty, even if they contained some text. I guess this might be a regression from my printing changes. Will verify tomorrow.
Flags: blocking1.9.1?
Oh, I haven't tested this on 1.9.1 yet.
Yes, also in 1.9.1
Priority: -- → P2
And should be pretty easy to fix. Will write the patch tomorrow.
Same happens with Mozilla/5.0 (Macintosh; U; Intel Mac OS X 10.5; en-US; rv:1.9.1b4pre) Gecko/20090420 Shiretoko/3.5b4pre ID:20090420031111
OS: Linux → All
Hardware: x86 → All
Attached patch for trunkSplinter Review
The interesting part is the last hunk in the patch. I want to be very strict when to allow mutations. Most of the patch is just moving nsDocumentObserverForNonDynamicPresContext, so that it can use PresShell. (Form elements will need some special handling also with clone-document-for-printing approach I'm doing for trunk.)
Attachment #373887 - Flags: superreview?(roc)
Attachment #373887 - Flags: review?(roc)
Blocks: 425265
1.9.1 will need just a bit different patch, and I'll write tests before landing. (well, if this gets review)
Flags: blocking1.9.1? → blocking1.9.1+
Attached patch for 1.9.1Splinter Review
The only difference is the last hunk in the patch.
Comment on attachment 373887 [details] [diff] [review] for trunk This is yucky. Can't wait for document cloning!
Attachment #373887 - Flags: superreview?(roc)
Attachment #373887 - Flags: superreview+
Attachment #373887 - Flags: review?(roc)
Attachment #373887 - Flags: review+
Status: NEW → RESOLVED
Closed: 16 years ago
Flags: in-testsuite?
Resolution: --- → FIXED
Verified fixed on trunk and 1.9.1 with: Mozilla/5.0 (Macintosh; U; Intel Mac OS X 10.5; en-US; rv:1.9.2a1pre) Gecko/20090423 Minefield/3.6a1pre ID:20090423040020 Mozilla/5.0 (Macintosh; U; Intel Mac OS X 10.5; en-US; rv:1.9.1b4pre) Gecko/20090423 Shiretoko/3.5b4pre ID:20090423040926
Status: RESOLVED → VERIFIED
Flags: in-testsuite? → in-testsuite+
Target Milestone: --- → mozilla1.9.2a1
Flags: wanted1.9.0.x+
Flags: blocking1.9.0.12?
Whiteboard: regression from 425265
Flags: wanted1.9.0.x+
Flags: blocking1.9.0.12?
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: