 Bug 489224 -  Printing doesn't print text field values, r+sr=roc